bugfix: card width overflow

--- a/css/style.css
+++ b/css/style.css
@@ -202,6 +202,10 @@ main{
         grid-template-columns: 100%;
         justify-content: space-around;
     }
+
+    .card{
+        width: 400px;
+    }
 }
 
 @media (max-width:500px)  { 
